packages/yukari_core/third_party/easytier/ffi.h

/**
 * A key/value pair used by list_instance and collect_network_infos.
 *
 * The caller allocates the array of pairs; the native side only fills in the
 * pointers, which stay valid until the next call into the same API family.
 */
typedef struct KeyValuePair {
    /** NUL-terminated UTF-8 key string owned by the native library. */
    const char *key;
    /** NUL-terminated UTF-8 value string owned by the native library. */
    const char *value;
} KeyValuePair;
/**
 * Callback invoked by the config server client when a server event arrives.
 *
 * event_json is a NUL-terminated UTF-8 JSON string that is only valid for the
 * duration of the callback; copy it if it must outlive the call. user_data is
 * the pointer passed to start_config_server_client, passed through unchanged.
 * The callback runs on an EasyTier internal thread, so it must not block.
 */
typedef void (*ConfigServerEventCallback)(const char *event_json, void *user_data);
/**
 * A socket address in the data-plane ABI (v3 accepts IPv4 only).
 *
 * All integer fields use native byte order; address bytes use network order.
 */
typedef struct DataPlaneSocketAddr {
    /** Address family; currently always 4 (IPv4). */
    uint16_t family;
    /** Port number in native byte order. */
    uint16_t port;
    /** Raw address bytes in network order; IPv4 uses the first four bytes. */
    uint8_t address[16];
} DataPlaneSocketAddr;
/**
 * One terminal notification produced by a submitted data-plane operation.
 *
 * Descriptors are obtained from data_plane_completion_drain. Draining makes
 * the typed result available but does not consume it; a *_result_take call
 * consumes it exactly once.
 */
typedef struct DataPlaneCompletion {
    /** Operation id that finished, as returned by a submit call. */
    uint64_t operation_id;
    /** Operation kind: 1 TCP connect, 2 TCP bind, 3 TCP accept, 4 TCP read,
     * 5 TCP write, 6 UDP bind, 7 UDP receive, 8 UDP send. */
    uint16_t operation_kind;
    /** Terminal status: 0 on success, otherwise a negative
     *  DataPlaneErrorKind value. */
    uint16_t status;
} DataPlaneCompletion;
/** Deadline direction selecting the read side of a resource. */
#define DATA_PLANE_DEADLINE_READ 1u
/** Deadline direction selecting the write side of a resource. */
#define DATA_PLANE_DEADLINE_WRITE 2u
/**
 * List running instances as name/JSON-config pairs.
 *
 * infos must point to a caller-allocated array of at least max_length
 * KeyValuePair elements; the entries are filled with pointers owned by the
 * native library and valid until the next list-style call. Returns the number
 * of pairs written (clamped to max_length) on success; on failure (negative),
 * call get_error_msg on the same thread.
 */
int list_instance(KeyValuePair *infos, size_t max_length);
/**
 * Collect peer/network information of running instances as name/JSON pairs.
 *
 * infos must point to a caller-allocated array of at least max_length
 * KeyValuePair elements; the entries are filled with pointers owned by the
 * native library and valid until the next list-style call. Returns the number
 * of pairs written (clamped to max_length) on success; on failure (negative),
 * call get_error_msg on the same thread.
 */
int collect_network_infos(KeyValuePair *infos, size_t max_length);
/**
 * Start the singleton config server client and register an event callback.
 *
 * config_server_url, hostname, and machine_id must be non-NULL NUL-terminated
 * UTF-8 strings alive for the duration of the call. secure_mode enables TLS
 * verification for the connection. callback is invoked for every server
 * event; user_data is passed through to it unchanged. Returns 0 on success;
 * on failure (non-zero), call get_error_msg on the same thread.
 */
int start_config_server_client(const char *config_server_url, const char *hostname,
                               const char *machine_id, bool secure_mode,
                               ConfigServerEventCallback callback, void *user_data);
/**
 * Drain up to capacity completion descriptors into the caller's array.
 *
 * completions must point to at least capacity writable DataPlaneCompletion
 * elements alive for the duration of the call. Draining a descriptor makes
 * its typed result available but does not consume it. Returns the number of
 * descriptors written (non-negative), or a negative DataPlaneErrorKind value
 * on failure.
 */
int data_plane_completion_drain(uint64_t session, DataPlaneCompletion *completions,
                                uint32_t capacity);