lib/bindings/generated/easytier.g.dart


/// Callback invoked by the config server client when a server event arrives.
///
/// event_json is a NUL-terminated UTF-8 JSON string that is only valid for the
/// duration of the callback; copy it if it must outlive the call. user_data is
/// the pointer passed to start_config_server_client, passed through unchanged.
/// The callback runs on an EasyTier internal thread, so it must not block.
typedef ConfigServerEventCallback =
    ffi.Pointer<ffi.NativeFunction<ConfigServerEventCallbackFunction>>;
typedef ConfigServerEventCallbackFunction = ffi.Void Function(
  ffi.Pointer<ffi.Char> event_json,
  ffi.Pointer<ffi.Void> user_data,
);
typedef DartConfigServerEventCallbackFunction = void Function(
  ffi.Pointer<ffi.Char> event_json,
  ffi.Pointer<ffi.Void> user_data,
);

const int DATA_PLANE_DEADLINE_READ = 1;

const int DATA_PLANE_DEADLINE_WRITE = 2;

/// One terminal notification produced by a submitted data-plane operation.
///
/// Descriptors are obtained from data_plane_completion_drain. Draining makes
/// the typed result available but does not consume it; a *_result_take call
/// consumes it exactly once.
final class DataPlaneCompletion extends ffi.Struct {
  /// Operation id that finished, as returned by a submit call.
  @ffi.Uint64()
  external int operation_id;

  /// Operation kind: 1 TCP connect, 2 TCP bind, 3 TCP accept, 4 TCP read,
  /// 5 TCP write, 6 UDP bind, 7 UDP receive, 8 UDP send.
  @ffi.Uint16()
  external int operation_kind;

  /// Terminal status: 0 on success, otherwise a negative
  /// DataPlaneErrorKind value.
  @ffi.Uint16()
  external int status;

  static ffi.Pointer<DataPlaneCompletion> $allocate(
    ffi.Allocator $allocator, {
    required int operation_id,
    required int operation_kind,
    required int status,
  }) => $allocator<DataPlaneCompletion>()
    ..ref.operation_id = operation_id
    ..ref.operation_kind = operation_kind
    ..ref.status = status;
}

/// A socket address in the data-plane ABI (v3 accepts IPv4 only).
///
/// All integer fields use native byte order; address bytes use network order.
final class DataPlaneSocketAddr extends ffi.Struct {
  /// Address family; currently always 4 (IPv4).
  @ffi.Uint16()
  external int family;

  /// Port number in native byte order.
  @ffi.Uint16()
  external int port;

  /// Raw address bytes in network order; IPv4 uses the first four bytes.
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> address;
}

/// A key/value pair used by list_instance and collect_network_infos.
///
/// The caller allocates the array of pairs; the native side only fills in the
/// pointers, which stay valid until the next call into the same API family.
final class KeyValuePair extends ffi.Struct {
  /// NUL-terminated UTF-8 key string owned by the native library.
  external ffi.Pointer<ffi.Char> key;

  /// NUL-terminated UTF-8 value string owned by the native library.
  external ffi.Pointer<ffi.Char> value;

  static ffi.Pointer<KeyValuePair> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Char> key,
    required ffi.Pointer<ffi.Char> value,
  }) => $allocator<KeyValuePair>()
    ..ref.key = key
    ..ref.value = value;
}
